Fix: 테스트 추가 및 수정